// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddCourseFormComponent should snap when not enabled 1`] = `
<tm-add-course-form
  activeCourses={[Function Array]}
  allCourses={[Function Array]}
  closeCourseFormEvent={[Function EventEmitter]}
  copyCourseEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isAddingCourse="false"
  isCopyingCourse="false"
  isEnabled="false"
  newCourseId=""
  newCourseName=""
  ngbModal={[Function NgbModal]}
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-6"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col-md-6"
          >
            <h5
              class="text-center"
            >
              Create new Course
            </h5>
          </div>
        </div>
      </div>
      <div
        class="col-md-6"
      >
        <div
          class="row text-center align-items-center mt-1"
        >
          <div
            class="col-md-3"
          >
            <h5
              class="text-md-right"
            >
              Or: 
            </h5>
          </div>
          <div
            class="col-md-9 text-md-left"
          >
            <button
              class="btn btn-info"
              id="btn-copy-course"
              type="button"
            >
              
               Copy from previous courses 
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body text-center"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course ID:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-id"
            maxlength="64"
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course Name:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-name"
            maxlength="80"
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label ngb-tooltip-class"
        >
          <span
            ngbtooltip="You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
          >
             Time Zone:
          </span>
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              id="new-time-zone"
            >
              
              <option
                value="GMT"
              >
                GMT (UTC)
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary btn-margin-left"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="col-md-9 offset-md-3 text-md-left"
        >
          <button
            class="btn btn-success"
            id="btn-save-course"
          >
            
             Add Course 
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;

exports[`AddCourseFormComponent should snap with default fields 1`] = `
<tm-add-course-form
  activeCourses={[Function Array]}
  allCourses={[Function Array]}
  closeCourseFormEvent={[Function EventEmitter]}
  copyCourseEvent={[Function EventEmitter]}
  courseAdded={[Function EventEmitter]}
  courseService={[Function Object]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  isAddingCourse="false"
  isCopyingCourse="false"
  isEnabled={[Function Boolean]}
  newCourseId=""
  newCourseName=""
  ngbModal={[Function NgbModal]}
  statusMessageService={[Function Object]}
  timezone={[Function String]}
  timezoneService={[Function Object]}
  timezones={[Function Array]}
>
  <div
    class="card border-primary fill-plain"
  >
    <div
      class="close-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          aria-hidden="true"
        >
          ×
        </span>
      </button>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-6"
      >
        <div
          class="row align-items-center"
        >
          <div
            class="col-md-6"
          >
            <h5
              class="text-center"
            >
              Create new Course
            </h5>
          </div>
        </div>
      </div>
      <div
        class="col-md-6"
      >
        <div
          class="row text-center align-items-center mt-1"
        >
          <div
            class="col-md-3"
          >
            <h5
              class="text-md-right"
            >
              Or: 
            </h5>
          </div>
          <div
            class="col-md-9 text-md-left"
          >
            <button
              class="btn btn-info"
              id="btn-copy-course"
              type="button"
            >
              
               Copy from previous courses 
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="card-body text-center"
    >
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course ID:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-id"
            maxlength="64"
            placeholder="e.g. CS3215-2013Semester1"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label"
        >
          Course Name:
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <input
            class="form-control ng-untouched ng-pristine ng-valid"
            id="new-course-name"
            maxlength="80"
            placeholder="e.g. Software Engineering"
            type="text"
          />
        </div>
      </div>
      <div
        class="form-group row"
      >
        <label
          class="col-md-3 text-md-right col-form-label ngb-tooltip-class"
        >
          <span
            ngbtooltip="You should not
                  need to change this as it is auto-detected based on your device settings. TEAMMATES automatically adjusts
                  to match the current time offset in your area, including clock changes due to daylight saving time."
          >
             Time Zone:
          </span>
        </label>
        <div
          class="col-md-6 text-md-left"
        >
          <div
            class="input-group"
          >
            <select
              class="form-control ng-untouched ng-pristine ng-valid"
              id="new-time-zone"
            >
              
              <option
                value="GMT"
              >
                GMT (UTC)
              </option>
            </select>
            <span
              class="input-group-btn"
              style="margin-left: 5px;"
            >
              <button
                class="btn btn-primary btn-margin-left"
              >
                Auto Detect
              </button>
            </span>
          </div>
        </div>
      </div>
      <div
        class="form-group row"
      >
        <div
          class="col-md-9 offset-md-3 text-md-left"
        >
          <button
            class="btn btn-success"
            id="btn-save-course"
          >
            
             Add Course 
          </button>
        </div>
      </div>
    </div>
  </div>
</tm-add-course-form>
`;
